# crabcode

./: Cargo.toml  README.md
src/: agent.rs  main.rs  tools.rs  types.rs  ui.rs
src/prompts/: agent.md
